--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
         "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^5.1.0",
+        "@types/webpack-env": "^1.18.8",
         "core-js": "^3.38.0",
         "regenerator-runtime": "^0.13.9",
+        "ts-loader": "^9.5.4",
+        "typescript": "^5.9.3",
         "webpack": "^5.74.0",
         "webpack-cli": "^5.1.0"
     },
