--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@babel/preset-react": "^7.28.5",
         "@hotwired/stimulus": "^3.0.0",
         "@hotwired/turbo": "^7.1.0 || ^8.0",
         "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^5.1.0",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "@types/webpack-env": "^1.18.8",
         "core-js": "^3.38.0",
         "regenerator-runtime": "^0.13.9",
@@ -27,6 +30,9 @@
         "@tailwindcss/postcss": "^4.1.18",
         "postcss": "^8.5.6",
         "postcss-loader": "^8.2.0",
+        "prop-types": "^15.8.1",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "tailwindcss": "^4.1.18"
     }
 }
